@@ -256,6 +256,7 @@ extern "C" {
 ///////// Speaker macros
 #define DEV_speaker_beep_on(frequency) bx_devices.pluginSpeaker->beep_on(frequency)
 #define DEV_speaker_beep_off() bx_devices.pluginSpeaker->beep_off()
+#define DEV_speaker_set_line(a) bx_devices.pluginSpeaker->set_line(a)
 
 ///////// Memory macros
 #define DEV_register_memory_handlers(param,rh,wh,b,e) \
